# Copyright 2023 Karlsruhe Institute of Technology, Institute for Measurement
# and Control Systems
#
# This file is part of YOLinO.
#
# YOLinO is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# YOLinO is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# YOLinO. If not, see <https://www.gnu.org/licenses/>.
#
# ---------------------------------------------------------------------------- #
# ----------------------------- COPYRIGHT ------------------------------------ #
# ---------------------------------------------------------------------------- #
[metadata]
name=yolino
version=1.0.0
description=YOLinO
long_description=Yolino - single-shot polyline detection
author=Annika Meyer
author_email=annika.meyer@kit.edu

[options]
package_dir=
    =src
packages=find:
python_requires= >= 3.6
install_requires=
    configargparse
    coloredlogs
    clearml
    dvc>=2.0.0
    gitpython
    matplotlib==3.4.3
    numpy>=1.14
    opencv-python>=4.4.0.46
    pandas>=1
    plotly
    protobuf>=3.9.2
    pynvml
    python-benedict<0.25
    scipy>=1.4.1
    scikit-learn #>=1.0.1
    seaborn
    shapely>=1.7.1
    tensorboard
    tensorboard-plugin-profile
    tensorflow>=2.3.4
    tikzplotlib
    torch>=1.7.0
    torchvision>=0.7.0
    tqdm>=4.43.0
    pyyaml
    rdp
    ujson
    wandb>=0.12.0

[options.packages.find]
where=src
